--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,18 @@ __pycache__/
 .env/
 .envrc
 
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# SecuRizz specific
+backend-api/.env
+oracle-service/.env
+frontend/.env.local
+
 # Data/Models
 models/
 datasets/raw/
@@ -26,4 +38,12 @@ datasets/processed/
 .DS_Store
 Thumbs.db
 
-# Logs`nlogs`n*.log`n`n# Node`nnode_modules/`n**/node_modules/`ndist/`nbuild/`n.next/`ncoverage/`n`n# Python`n__pycache__/`n*.pyc`n.venv/`n.env/`n.envrc`n`n# Data/Models`nmodels/`ndatasets/raw/`ndatasets/processed/`n`n# OS`n.DS_Store`nThumbs.db`n
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Temporary files
+*.tmp
+*.temp
